--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ a:hover {
     margin: 0 auto;
     padding: 10px;
     padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .header {
@@ -73,96 +77,12 @@ a:hover {
     text-decoration-color: orange;
 }
 
-.portfolio {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: #EBEBEB;
-}
-
-.go-top {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    background-color: #EBEBEB;
-    border: 3px dashed orange;
-    padding: 5px; 
-    border-radius: 15px;
-    margin-bottom: 10px;
-}
-
-.go-top a {
-    display: block;
-    color: #0066cc; 
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: orange;
-    width: 100%;
-    height: 100%; 
-    padding: 5px;
-}
-
-.go-top a:hover {
-    text-decoration-color: orange;
-    color: orange !important;
-}
-
-.portfolio h2 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.project {
-    padding: 15px;
-    border-radius: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-    background-color: rgb(255, 255, 255);
-}
-
-.project img {
-    width: 150px;
-    height: 100px;
-    border-radius: 15px;
-    margin-right: 20px;
-    object-fit: cover;
-}
-
-.project-content {
-    flex: 1;
-}
-
-.project-content h3 {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-.project-content a {
-    color: #0066cc;
-    text-decoration: none;
-}
-
-.tags-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
 .social-links{
     display: inline-block;
     background-color: #ffffff;
     border: 3px dashed orange;
     padding: 3px 15px;
     border-radius: 10px;
-}
-
-.tag {
-    background-color: #EBEBEB;
-    border: 3px dashed orange;
-    padding: 3px 8px;
-    border-radius: 10px;
-    font-size: 14px;
 }
 
 @media (max-width: 768px) {
